language/move-prover/tests/sources/functional/address_quant.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/address_quant.move:53:10 ───
    │
 53 │          invariant atMostOne();
    │          ^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/address_quant.move:46:5: multiple_copy_incorrect (entry)
    =     at tests/sources/functional/address_quant.move:47:9: multiple_copy_incorrect
    =         sndr = <redacted>
    =     at tests/sources/functional/address_quant.move:46:5: multiple_copy_incorrect (exit)
